@@ -22,7 +22,7 @@
 #include <grub/symbol.h>
 #include <grub/i386/pc/memory.h>
 
-void EXPORT_FUNC(grub_stop) (void);
+void EXPORT_FUNC(grub_stop) (void) __attribute__ ((noreturn));
 void EXPORT_FUNC(grub_stop_floppy) (void);
 
 #endif
